[package]
name = "aoc_2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
itertools = "0.10.5"
pathfinding = "4.0.0"
nom = "7.1.1"
memoize = "0.4.0"
par-map = "0.1.4"
num-rational = "0.4.1"
num-bigint = "0.4.3"
